Avoid container overflow in img

--- a/theme/book/book.css
+++ b/theme/book/book.css
@@ -49,3 +49,7 @@ header {
     line-height: 1em;
     margin: 0;
 }
+
+img {
+	width: 100%;
+}
